changed the project to be a search function that will return data on your favourite artist

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,18 +10,12 @@
 <body>
 
 
-    <% categories.forEach(category=> { %>
-
-        <p>
-            <%= category.name %><img src="<%= category.url %>" alt="" height="<%= category.width %>"
-                    width="<%= category.height %>">
-
-        </p>
-
-
-
-
-        <% }) %>
+    <form action="/search-artist" method="post">
+        <label for="artist-name">Artist Name:</label>
+        <input type="search" name="artist-name" id="artist-name" required
+            placeholder="Search for your favourite artist">
+        <button type="submit">Search</button>
+    </form>
 
 
 
