added a second get request which takes the id returned and searches for top tracks, which are then ouput onto the page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spotify App</title>
 </head>
 
 <body>
@@ -29,6 +29,23 @@
         <h2>
             Followers: <%= artistInfo.followers.total %>
         </h2>
+        <h3>Top 5 Tracks:</h3>
+
+        <ul>
+
+            <% topTracks.forEach(track=> { %>
+
+                <li>
+                    <%= track %>
+                </li>
+
+                <% }) %>
+
+
+
+        </ul>
+
+
 
         <% } %>
 
