added a new style sheet with some very basic styling to start

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('partials/head', { title: 'Index Page' }) %>
+<%- include('partials/head', { title: 'Search for Arist on Spotify' }) %>
 
     <body>
+        <h1>Search for your favourite artist on Spotify</h1>
 
         <form action="/search-artist" method="post">
             <label for="artistName">Artist Name:</label>
