--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,10 +10,38 @@ body {
     background-color: var(--black);
     color: white;
     padding: 100px;
+    font-size: 16px;
 }
 
 h1 {
     font-weight: 800;
+    margin-bottom: 25px;
+    font-size: 5.61rem;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: 4.209rem
+}
+
+h3 {
+    font-size: 3.157rem;
+}
+
+h4 {
+    font-size: 2.369rem;
+}
+
+h5 {
+    font-size: 1.777rem;
+}
+
+h6 {
+    font-size: 1.333rem
+}
+
+p {
+    font-size: 1rem;
 }
 
 h2,
@@ -21,9 +49,58 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 500;
+    font-weight: 700;
+    margin-bottom: 15px;
+    line-height: 1.2;
 }
 
 a {
     color: var(--green)
+}
+
+section {
+    margin: 25px 0;
+    border: 1px solid var(--white);
+    padding: 50px;
+    border-radius: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    row-gap: 25px;
+}
+
+button {
+    background-color: var(--green);
+    color: var(--white);
+    border: 1px solid var(--green);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: 12px;
+    min-width: 120px;
+}
+
+input {
+    padding: 12px;
+    min-width: 500px;
+    border: 1px solid var(--white);
+}
+
+.hidden {
+    display: none;
+}
+
+.card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    gap: 25px;
 }
