--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,10 @@
 <%- include('partials/head', { title: 'Search for Arist on Spotify' }) %>
 
     <body>
-        <h1>Search for your favourite artist on Spotify</h1>
+        <h1>Search for your favourite artist</h1>
 
         <form action="/search-artist" method="post">
-            <label for="artistName">Artist Name:</label>
+            <label class="hidden" for="artistName">Artist Name:</label>
             <input type="search" name="artistName" id="artistName" required
                 placeholder="Search for your favourite artist">
             <button type="submit">Search</button>
