changed top section to header element, updated button colour

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -75,7 +75,7 @@ section {
 
 button {
     background-color: var(--green);
-    color: var(--white);
+    color: var(--black);
     border: 1px solid var(--green);
     -webkit-appearance: none;
     -moz-appearance: none;
