--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -26,6 +26,7 @@ h2 {
 
 h3 {
     font-size: 3.157rem;
+    margin-bottom: 15px;
 }
 
 h4 {
@@ -50,12 +51,12 @@ h4,
 h5,
 h6 {
     font-weight: 700;
-    margin-bottom: 15px;
     line-height: 1.2;
 }
 
 a {
-    color: var(--green)
+    color: white;
+    text-decoration: none;
 }
 
 section {
@@ -94,7 +95,7 @@ input {
     display: none;
 }
 
-.card {
+.card a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -103,4 +104,13 @@ input {
     -ms-flex-direction: row;
     flex-direction: row;
     gap: 25px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.rounded {
+    aspect-ratio: 1/1;
+    height: auto;
+    border-radius: 50%;
 }
