--- a/views/result.ejs
+++ b/views/result.ejs
@@ -15,7 +15,7 @@
                     <a class="btn" href="/">Search Again</a>
                 </div>
 
-                <img class="rounded" src="<%= image %>" alt="" height="300" width="300">
+                <img class="rounded" src="<%= artistInfo.image %>" alt="" height="300" width="300">
 
                 <p>
                     Followers: <%= artistInfo.followers.total %> Popularity: <%= artistInfo.popularity %>
