--- a/views/result.ejs
+++ b/views/result.ejs
@@ -3,8 +3,6 @@
 <%- include('partials/head', { title: 'Results' }) %>
 
     <body>
-
-
         <% if (locals.artistInfo) { %>
 
             <header id="artistInfo">
@@ -64,6 +62,9 @@
                                 <h4>
                                     <%= album.name %>
                                 </h4>
+                                <p class="artists">
+                                    <%= album.artists %>
+                                </p>
                             </div>
                         </a>
                     </div>
@@ -74,7 +75,7 @@
 
             <section id="relatedArtists">
 
-                <h3>Relatd Artists</h3>
+                <h3>Related Artists</h3>
                 <% relatedArtists.forEach(artist=> { %>
 
                     <div class="card artist">
