renamed profile to dashboard, deleted old code for searching for artists as no longer needed

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -81,11 +81,12 @@ button,
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    padding: 12px;
+    padding: 12px 20px;
     min-width: 120px;
     cursor: pointer;
     margin-left: -5px;
     border-radius: 500px;
+    display: inline-block
 }
 
 input {
