--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,6 +6,8 @@
 
         <% if (locals.user) { %>
 
+
+
             <section>
                 <h1>Welcome <%= user.display_name %>!
                 </h1>
@@ -42,6 +44,8 @@
                             <% }) %>
 
             </section>
+
+            <a class="btn" href="/">Search Again</a>
 
             <% } else { %>
 
