--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/head', { title: 'Search for Arist on Spotify' }) %>
 
     <body>
-        <h1>Search for your favourite artist</h1>
+        <!-- <h1>Search for your favourite artist</h1>
 
         <div>
             <form action="/search-artist" method="post">
@@ -12,9 +12,11 @@
                     placeholder="Search for your favourite artist">
                 <button type="submit">Search</button>
             </form>
-        </div>
+        </div> -->
 
-        <section> <a class="btn" href="/authorize">Login to Spotify</a></section>
+        <h3>Login</h3>
+
+        <div> <a class="btn" href="/authorize">Login to Spotify</a></div>
 
     </body>
 
