--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -14,16 +14,13 @@
 
         <h1>Who sings this song?</h1>
 
-        <% likedSongs.forEach(track=> { %>
+        <button id="playButton" %> >Play Song </button>
 
-            <li>
-                <%= track.track.name %>
-            </li>
-
-            <% }) %>
+        <audio id="audioPlayer" src=" <%= preview %> "></audio>
 
 
 
+        <script src="/scripts/index.js"></script>
 
     </body>
 
