added more random functionality to get an offset based on the users liked songs length, that returns a random block of 5 artists, then the app chooses 1 of those artists randomly and plays the preview. We also generate an array consisting of the artist as the correct answer and 3 related answers that are incorrect. These values are then output as data attributes to the buttons

--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -22,8 +22,8 @@
 
             <% answers.forEach(answer=> { %>
 
-                <button class="answer" data-artist-name="<%= answer %>">
-                    <%= answer %>
+                <button class="answer" data-artist-name="<%= answer.name %>" data-answer=" <%= answer.answer %>">
+                    <%= answer.name %>
                 </button>
 
                 <% }) %>
