--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -6,8 +6,9 @@
 
         <h1>Shuffle Showdown</h1>
 
+        <h2>How well do you know your liked songs?</h2>
 
-        <div> <a class="btn" href="/authorize">Let's play!</a></div>
+        <div> <a class="btn" href="/authorize">Let's find out!</a></div>
 
 
     </body>
