--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -5,19 +5,16 @@
     <body>
 
 
-        <h1>Who sings this song?</h1>
+        <h1>Name the artist</h1>
 
         <button id="playButton" %> >Pause Song </button>
 
-        <audio loop id="audioPlayer" src=" <%= preview %> "></audio>
+        <audio loop id="audioPlayer" src=""></audio>
 
         <section id="artist-answers">
 
 
         </section>
-
-        <div id="answerModal"></div>
-
 
         <script src="/scripts/index.js"></script>
 
