--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
             <h2>How well do you know your liked songs?</h2>
         </header>
 
-        <section class="container"> <a class="btn" href="/authorize">Login with Spotify</a></section>
+        <section class="container"> <a class="btn bg-green" href="/authorize">Login with Spotify</a></section>
 
 
     </body>
