added rounds and a count that triggers the endgame function once it reaches a certain number

--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -28,6 +28,12 @@
                 <button class="btn bg-white" id="startGame">Get Started</button>
             </div>
 
+            <div class="flex column align-center justify-center">
+                <h3 id="round">Round <span id="roundNumber">1</span>
+                </h3>
+                <h4 id="timeRemaining">Time Remaining:</h4>
+            </div>
+
         </section>
 
 
