added timer that restarts when an answer is questioned or when the timer runs out

--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -13,7 +13,7 @@
 
         </header>
 
-        <audio autoplay="false" loop id="audioPlayer" src=""></audio>
+        <audio autoplay="false" id="audioPlayer" src=""></audio>
 
         <section class="container justify-center">
             <div class="visualiser">
@@ -29,9 +29,9 @@
             </div>
 
             <div class="flex column align-center justify-center">
-                <h3 id="round">Round <span id="roundNumber">1</span>
+                <h3 id="round">Round <span id="roundNumber"></span>
                 </h3>
-                <h4 id="timeRemaining">Time Remaining:</h4>
+                <h4 id="timeRemaining">Time Remaining: <span id="timeCounter">15</span></h4>
             </div>
 
         </section>
