deleted some old files, updated some classes and css

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,13 +4,17 @@
 
     <body class="flex column justify-center">
 
-        <header class="container flex column gap">
+        <header class="container flex column align-center gap">
             <h1>Shuffle Showdown</h1>
 
             <h2>How well do you know your liked songs?</h2>
         </header>
 
-        <section class="container"> <a class="btn bg-green" href="/authorize">Login with Spotify</a></section>
+        <div class="container flex column mt-50">
+            <div class="flex row justify-center align-center gap"><a class="btn bg-green" href="/authorize">Login with
+                    Spotify</a>
+            </div>
+        </div>
 
 
     </body>
