output the score tally onto the page

--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -30,10 +30,13 @@
 
             <button class="btn bg-green" id="playButton" %>>Pause Song
             </button>
-            <div class="flex column align-center justify-center w-100">
+            <div id="gameInfo" class="flex row space-between align-center w-100">
                 <h3 id="round">Round <span id="roundNumber"></span>
                 </h3>
-                <h4 id="timeRemaining">Time Remaining: <span id="timeCounter">15</span></h4>
+                <div>
+                    <h4 id="timeRemaining">Time Remaining: <span id="timeCounter">15</span></h4>
+                    <h4 id="scoreTally">Score: <span id="scoreCounter">15</span></h4>
+                </div>
             </div>
 
         </section>
