--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -211,6 +211,10 @@ button,
     display: none;
 }
 
+#gameInfo {
+    display: none;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
