adjusted some more classes and worked on responsiveness on mobile

--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -10,7 +10,6 @@
             <h2>The quicker you answer, the higher your score!</h2>
 
 
-
         </header>
 
         <audio autoplay="false" id="audioPlayer" src=""></audio>
@@ -30,7 +29,7 @@
 
             <button class="btn bg-green" id="playButton" %>>Pause Song
             </button>
-            <div id="gameInfo" class="flex row space-between align-center w-100">
+            <div id="gameInfo" class="flex row space-between align-center w-100 wrap">
                 <h3 id="round">Round <span id="roundNumber"></span>
                 </h3>
                 <div>
