--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('partials/head', { title: 'Shuffle Showdown' }) %>
+<%- include('partials/head', { title: 'Shuffle Showdown | How well do you know your liked songs?' }) %>
 
     <body class="flex column justify-center">
 
-        <header class="container flex column align-center gap">
+        <header class="container flex column align-center  gap text-center">
             <h1>Shuffle Showdown</h1>
 
             <h2>How well do you know your liked songs?</h2>
         </header>
 
-        <div class="container flex column mt-50">
+        <div class="container flex column mt-50 align-center justify-center">
             <div class="flex row justify-center align-center gap"><a class="btn bg-green" href="/authorize">Login with
                     Spotify</a>
             </div>
