--- a/views/score.ejs
+++ b/views/score.ejs
@@ -24,7 +24,7 @@
 
 
 
-                                <div id="endAction" class="flex row gap mt-25"> <a class="btn bg-green"
+                                <div id="endAction" class="flex row gap mt-25 wrap"> <a class="btn bg-green"
                                         href="/questions">Play
                                         Again</a><a class="btn bg-white" href="#">View
                                         Highscores</a></div>
